--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>file List</h1>
+        <h1 class="h1">file List</h1>
         <input type="file" class="btn file" multiple webkitdirectory id="fileURL" />
 
         <table class="table table-hover">
